--- a/food.css
+++ b/food.css
@@ -16,18 +16,28 @@
 .square.carbon {
 	background-color: #949FB1;
 }
+.textlarge{
+font-size: 20pt;
+}
+.textmiddle{
+font-size: 14pt;
+}
 ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
 li {
-	margin-top: 10px;
-	font-size: 20;
+	margin-bottom: 10px;
+	font-size: 12pt;
 	font-family: Arial, sans-serif;
  #text-shadow: 2px 0px 15px #292929;
 }
 a.nutrition {
 	margin-top:20px;
 	margin-left: 20px;
+}
+.ui-block-a img {
+    width  : 100%;
+    height : auto;
 }
