--- a/food.css
+++ b/food.css
@@ -38,7 +38,7 @@ a.nutrition {
 }
 
 .ui-block-a img {
-    width  : 40%;
+    width  : 300px;
     height : auto;
 	float:right;
 	margin-right:20px;
