--- a/food.css
+++ b/food.css
@@ -36,21 +36,21 @@ a.nutrition {
 	margin-top:20px;
 	margin-left: 20px;
 }
-
+/*
 .ui-block-a img {
     width  : 300px;
     height : auto;
 	float:right;
 	margin-right:20px;
 }
-/*.ui-block-a canvas {
+.ui-block-a canvas {
 margin-right:20px;
 float:right;
-}*/
+}
 .ui-block-a .textmiddle {
 float:right;
 margin-right:20px;
-}
+}*/
 
 
 .modal {
