--- a/food.css
+++ b/food.css
@@ -36,13 +36,47 @@ a.nutrition {
 	margin-top:20px;
 	margin-left: 20px;
 }
-/*
-.ui-block-a img {
-    width  : 300px;
+
+.ui-block-a .foodimg img {
+    width  : 100%;
     height : auto;
-	float:right;
-	margin-right:20px;
+	
 }
+#redHero {
+  border-bottom: 2px solid #FFFFFF;
+}
+		
+blockquote {
+font-family: Georgia, serif;
+font-size: 18px;
+font-style: italic;
+width: 500px;
+margin: 0.25em 0;
+padding: 0.25em 40px;
+line-height: 1.45;
+position: relative;
+color: #383838;
+}
+blockquote:before {
+display: block;
+content: "\201C";
+font-size: 80px;
+position: absolute;
+left: -20px;
+top: -20px;
+color: #7a7a7a;
+}
+blockquote cite {
+color: #999999;
+font-size: 14px;
+display: block;
+margin-top: 5px;
+}
+ 
+blockquote cite:before {
+content: "\2014 \2009";
+}
+/*
 .ui-block-a canvas {
 margin-right:20px;
 float:right;
