--- a/food.css
+++ b/food.css
@@ -86,15 +86,16 @@ margin-top: 5px;
 blockquote cite:before {
 content: "\2014 \2009";
 }
-/*
-.ui-block-a canvas {
-margin-right:20px;
-float:right;
+
+.ui .chv {
+    text-align:center; position:absolute; top:60px; bottom:50px; left:20px; right:20px; display:block; margin:0; height:auto; background:green; text-align:center; vertical-align:middle;
 }
-.ui-block-a .textmiddle {
-float:right;
-margin-right:20px;
-}*/
+
+.table{display:table;}
+.table-cell{display:table-cell;}
+.align-middle{vertical-align:middle; text-align:center;}
+.full-height{height:100%;}
+.full-width{width:100%;}
 
 #buttoncontainer .ui-btn {
     padding: 10px;
