--- a/food.css
+++ b/food.css
@@ -88,8 +88,11 @@ content: "\2014 \2009";
 }
 
 .ui .chv {
-    text-align:center; position:absolute; top:60px; bottom:50px; left:20px; right:20px; display:block; margin:0; height:auto; background:green; text-align:center; vertical-align:middle;
-}
+    text-align:center; position:absolute; top:60px; bottom:50px; left:20px; right:20px; display:block; margin:0; height:auto; background:white; text-align:center; vertical-align:middle;
+	height: 180px;
+	width: 50%;
+	margin-left: 45%;
+	}
 
 .table{display:table;}
 .table-cell{display:table-cell;}
