--- a/jquery.mobile.flatui.css
+++ b/jquery.mobile.flatui.css
@@ -180,7 +180,7 @@
 .ui-btn-down-b{border:1px solid #1abc9c;background:#1abc9c;font-weight:bold;color:#fff;}
 .ui-btn-down-b:visited,.ui-btn-down-b:hover,.ui-btn-down-b a.ui-link-inherit{color:#fff}
 .ui-btn-up-b,.ui-btn-hover-b,.ui-btn-down-b{font-family:Lato,sans-serif;text-decoration:none}
-.ui-bar-b .ui-btn-up-a,.ui-bar-b .ui-btn-down-a,.ui-bar-b .ui-btn-hover-a{background-color:#16a085;border:1px solid #16a085}
+.ui-bar-b .ui-btn-up-a,.ui-bar-b .ui-btn-down-a,.ui-bar-b .ui-btn-hover-a{background-color:#AAD041;border:1px solid #AAD041}
 
 .ui-bar-c{border:1px solid #f2f2f2;background:#f2f2f2;color:#000;font-weight:bold;font-family:Lato,sans-serif;}
 .ui-bar-c .ui-link-inherit{color:#3e3e3e}
