--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ blockquote cite { font-style: normal; display: block; text-align: right; text-tr
 
 blockquote {
 	font-family: Georgia, Times, serif;
-	width: 300px; /* required */
+	width: 100%/*300px; /* required */
 	margin: 0 auto;
 	}
 	
