--- a/jquery.mobile.flatui.css
+++ b/jquery.mobile.flatui.css
@@ -293,7 +293,7 @@
 .ui-body-g .ui-link:visited,.ui-body-g .ui-link:hover,.ui-body-g .ui-link:active{color:#55d98d}
 .ui-body-g.ui-input-text{border:2px solid #eee;}
 .ui-body-g.ui-input-text.ui-focus{border:2px solid #55d98d;-webkit-transition:border linear .2s;-moz-transition:border linear .2s;-o-transition:border linear .2s;transition:border linear .2s}
-.ui-btn-up-g{border:1px solid #2ecc71;background:#2ecc71;font-weight:bold;color:#fff;}
+.ui-btn-up-g{border:1px solid #AAD041;background:#AAD041;font-weight:bold;color:#fff;}
 .ui-btn-up-g:visited,.ui-btn-up-g a.ui-link-inherit{color:#fff}
 .ui-btn-hover-g{border:1px solid #55d98d;background:#55d98d;font-weight:bold;color:#fff;}
 .ui-btn-hover-g:visited,.ui-btn-hover-g:hover,.ui-btn-hover-g a.ui-link-inherit{color:#fff}
