--- a/food.css
+++ b/food.css
@@ -5,6 +5,24 @@ div[class|=ui-block] {
     padding: 10px;
     vertical-align: middle;
     display: inline-block; }*/
+	
+.DivParent {
+    height: 150px;
+    border: 1px solid lime;
+    white-space: nowrap;
+    text-align: center;
+}
+.DivWhichNeedToBeVerticallyAligned {
+    display: inline-block;
+    vertical-align: middle;
+    white-space: normal;
+}
+.DivHelper {
+    display: inline-block;
+    vertical-align: middle;
+    height:100%;
+}
+
 .square {
 	width: 10px;
 	height: 25px;
